# rust-best-practices

./: CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml  docs_for_confluence.csv
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.MD
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  text-comprehension.md
.github/workflows/: deploy-confluence.yml  rust.yml  typos.yml
book/: chapter_01.md  chapter_02.md  chapter_03.md  chapter_04.md  chapter_05.md  chapter_06.md  chapter_07.md  chapter_08.md  zz_final_notes.md
examples/simple-type-state/src/: main.rs
examples/type-state-builder/src/: main.rs
src/: lib.rs
src/selection/: domain.rs  mod.rs  parser.rs  serde.rs
src/verify/: error.rs  mod.rs
