[package]
name = "reshape"
version = "0.1.0"
edition = "2024"

[dependencies]
apollo-compiler = "1.27"
indexmap = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1.41"
winnow = "0.7.6"

[dev-dependencies]
insta = { version = "1.41.1", features = ["glob"] }

[lints.clippy]
correctness = "deny"
suspicious = "deny"
style = "deny"
complexity = "deny"
perf = "deny"
pedantic = "deny"
nursery = "warn"

[lints.rust]
missing_docs = "allow"
